--- a/package.json
+++ b/package.json
@@ -5,18 +5,28 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Lochan Potdar",
   "license": "MIT",
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.23.1",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.1",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
