--- a/package.json
+++ b/package.json
@@ -13,22 +13,16 @@
   "author": "Lochan Potdar",
   "license": "MIT",
   "dependencies": {
-    "babel-eslint": "^10.1.0",
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
-    "config": "^3.3.6",
-    "eslint": "^7.23.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-react": "^7.23.1",
+    "client": "file:client",
+    "config": "^3.3.3",
     "express": "^4.17.1",
-    "express-validator": "^6.10.0",
+    "express-validator": "^6.8.1",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.1",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "request": "^2.88.2"
+    "mongoose": "^5.11.8",
+    "normalize-url": "^5.3.0"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
